HEAD
    + Fixed check of running machines when system language is not English
    + Clean network from previous scenario when deploying a new one
    + Fix assignation of nbd device numbers
    + clean option removed from the anste executable, use anste-clean instead
    + nat-iface and nameserver are now automatically detected
    + Environment variables named ANSTE_* are passed to setup scripts
    + Current scenario can be now shut down without specifying the name again
    + Check for unrecognized running VMs in anste-clean and added --force
      option to allow destroying them
    + Added anste-snapshot tool
    + Use qcow2 images instead of raw to support snapshots
    + New instance() method for System and Virtualizer abstract classes
    + Fixed error in the reboot type of test with the JunitWriter
    + Removed deprecated anste-manager and anste-job tools, use of a CI tool
      like Jenkins instead is recommended
    + Moved src/lib/ANSTE to src/ANSTE and data outside of src
    + Changing the cache type of the disk to one that gives faster results
    + Bridges are now named anstebr instead of virbr to avoid conflicts
    + Do not destroy scenario when a critical test fails using -wait-fail
    + files in images can be directories whose content is put in the image
      target directory
    + Fix install instructions using new repository
0.10
    + Added duration of each executed tests in JUnit report
    + Stop properly the execution or creation if an error is found in the
      custom pre/post installation scripts
    + Do not assign IP address to internal network bridges
    + Use VirtIO for network cards instead of e1000 in libvirt configuration
    + Use VirtIO instead of emulated IDE disks in libvirt configuration
    + Install packages always non-interactive and do not install recommends
    + Autoconnect with anste-connect if there is only one deployed host
    + Adding support to post tests scripts defined in the images