@@ -1,4 +1,5 @@
 HEAD
+    + Set options from [global] conf as commandline variables if not specified
     + Fixed check of running machines when system language is not English
     + Clean network from previous scenario when deploying a new one
     + Fix assignation of nbd device numbers
